# vllm-qwen3guard-test

./: .dockerignore  .gitignore  Dockerfile  README.md  RESULTS.md  colab_qwen3guard_gen_4b.ipynb  detect_pii.py  docker-compose.yml  main.py  pyproject.toml  requirements.docker.txt  requirements.txt  run_docker_eval.py
calib/: recall_v1.json  recall_v2.json  recall_v3.json  recall_v4.json  recall_v5.json
data/: opf_policy_sft_manifest.json  opf_policy_sft_train.jsonl  pii_test_dataset.json
docs/: opf_policy_sft_colab.md
notebooks/: opf_policy_sft_colab.ipynb
results/: results.json
scripts/: build_opf_policy_sft_assets.py
