[project]
name = "qwen3guard-pii-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=0.26.0",
    "bitsandbytes>=0.42.0",
    "opf @ git+https://github.com/openai/privacy-filter.git",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "requests>=2.32.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.3",
    "transformers>=4.51.0",
    "mlx-vlm>=0.4.3",
]
